[gd_scene load_steps=5 format=2]

[ext_resource path="res://GameOver.gd" type="Script" id=1]
[ext_resource path="res://assets/sounds/atmospheres/FF_HFX_hit_lilac.wav" type="AudioStream" id=2]
[ext_resource path="res://assets/sounds/zombies/ESM_Horror_Game_Vocal_Creature_Evil_Clown_Cackle_Wet.wav" type="AudioStream" id=3]
[ext_resource path="res://assets/sounds/songSamples/BO_HWD_140_Keys_Loop_Piano_High_Ching_Em.wav" type="AudioStream" id=4]

[node name="GameOver" type="Node2D"]
script = ExtResource( 1 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Background" type="ColorRect" parent="CanvasLayer"]
margin_right = 1024.0
margin_bottom = 600.0
color = Color( 0, 0, 0, 1 )

[node name="Label" type="Label" parent="CanvasLayer"]
margin_left = 364.0
margin_top = 198.0
margin_right = 444.0
margin_bottom = 216.0
rect_scale = Vector2( 4, 4 )
text = "GAME OVER"

[node name="quit" type="Button" parent="CanvasLayer"]
margin_left = 542.0
margin_top = 331.0
margin_right = 632.0
margin_bottom = 351.0
rect_scale = Vector2( 3, 3 )
text = "QUIT"

[node name="playAgain" type="Button" parent="CanvasLayer"]
margin_left = 215.0
margin_top = 331.0
margin_right = 305.0
margin_bottom = 351.0
rect_scale = Vector2( 3, 3 )
text = "PLAY AGAIN"

[node name="impact" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
volume_db = -10.0
autoplay = true

[node name="laugh" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = -20.0
pitch_scale = 0.5
autoplay = true

[node name="mainTheme" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -10.0
autoplay = true

[connection signal="pressed" from="CanvasLayer/quit" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="CanvasLayer/playAgain" to="." method="_on_playAgain_pressed"]
